# searchns

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_FLAGS.md  FEATURE_SUMMARY.md  ICON_GUIDE.md  LICENSE  README.md  UPLOAD_GUIDE.md  app.manifest  app.rc  build.rs
.github/workflows/: build.yml
scripts/: build_both_versions.bat  check_icon.ps1  complete_verification.ps1  create_test_data.ps1  final_check.ps1  release.bat  release.sh  resource_check.ps1  test_build.bat  test_case_insensitive.ps1  verify_build.ps1  verify_versions.ps1
src/: lib.rs  main.rs
